# iota-examples

./: .prettierignore  endpoints.txt  ideas.txt  package.json  pnpm-lock.yaml  processCheckpointsTxs.ts  tsconfig.json
cli-commands/: coffeeshop  gas-smashing  indexer  iota-names  iota-nameservice  multisig-sign.txt  package-owner  pay  send  send-many  split-coin  sponsor  staking  sui-nameservice  unstake-all  vec-map
curl/: buildTxWithApi.txt  getCheckpoint.txt  getEvents.txt  getLatestCheckpointNumber.txt  getNetworkMetrics.txt  getObject.txt  getOwnedObjects.txt  getSystemState.txt  getTransactionBlock.txt  iotaNamesLookup.txt  moveViewFunction.txt  queryTransactionBlocks.txt  tryGetPastObject.txt
deposit_tests/: README.md  consts.ts  keys.ts  main.ts  published.json  results.json  setup.ts  transactionResults.ts
graphql/: README.md  address-objects  address-txs-filter  dynamic-field.ts  dynamic-object-field  getStakeTxs.ts  iota-names  iota-names-nft.ts  iota-names-registry.ts  move-view-function  object-move-data  programmable-txs  programmable-txs-by-function  programmableTxs.ts  programmableTxsByFunction.ts  query-by-tag  stake-txs.json  staked-objects.ts  subscribeTransactionsLive.ts  typeTag.ts
rust/: Cargo.toml
rust/examples/: utils.rs
rust/iota-sdk/: Cargo.toml
rust/iota-sdk/examples/: bs64_tx_bytes.rs  ptb_stats.rs
rust/monorepo/: Cargo.toml
rust/monorepo/examples/: decode_bs64_transaction_bytes.rs  transaction_bytes.rs
system-data/: candidatePendingValidators.ts  chainIdentifier.ts  checkpoints.ts  coinMetadata.ts  committee.ts  epochs.ts  (+4 more)
(+53 files in other folders)
