[package]
name = "iota-rust-sdk-examples"
version = "0.1.0"
edition = "2024"

[dependencies]
iota-sdk = { git = "https://github.com/iotaledger/iota", package = "iota-sdk", tag = "v1.0.0" }
iota-config = { git = "https://github.com/iotaledger/iota", package = "iota-config", tag = "v1.0.0" }
iota-keys = { git = "https://github.com/iotaledger/iota", package = "iota-keys", tag = "v1.0.0" }
iota-types = { git = "https://github.com/iotaledger/iota", package = "iota-types", tag = "v1.0.0" }
iota-json-rpc-types = { git = "https://github.com/iotaledger/iota", package = "iota-json-rpc-types", tag = "v1.0.0" }
shared-crypto = { git = "https://github.com/iotaledger/iota", package = "shared-crypto", tag = "v1.0.0" }
anyhow = "1.0"
base64 = "0.22.1"
bcs = "0.1.4"
futures = "0.3.28"
reqwest = { version = "0.12", default-features = false, features = [
    "http2",
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43", features = ["full"] }

[[example]]
name = "utils"
path = "examples/utils.rs"
crate-type = ["staticlib"]
